--- a/site/index.html
+++ b/site/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Van travels | Custom Vietnam, Thailand & Cambodia Tours</title>
+    <title>Hidden Charm Asia | Custom Vietnam, Thailand & Cambodia Tours</title>
     <meta
       name="description"
       content="Custom SE Asia trips designed by local experts. Private drivers, vetted hotels, clear inclusions. Book a free discovery call."
@@ -49,7 +49,7 @@
         <div class="mx-auto flex w-full max-w-6xl items-center justify-between px-6 py-4">
           <div class="flex items-center gap-2 text-lg font-semibold text-ink-900">
             <div class="h-9 w-9 rounded-xl bg-gradient-to-br from-sunrise to-lotus"></div>
-            <span>Van travels</span>
+            <span>Hidden Charm Asia</span>
           </div>
           <nav class="hidden items-center gap-8 text-sm font-medium text-ink-600 md:flex">
             <a class="hover:text-ink-900" href="#styles">Travel styles</a>
@@ -90,7 +90,7 @@
               Custom holidays in Southeast Asia
             </p>
             <h1 class="text-4xl font-semibold text-ink-900 md:text-5xl">
-              Van travels — Custom Vietnam, Thailand & Cambodia Holidays
+              Hidden Charm Asia — Custom Vietnam, Thailand & Cambodia Holidays
             </h1>
             <p class="text-lg text-ink-600">
               Travel Vietnam, Thailand, and Cambodia with a plan that fits your pace, comfort level, and
@@ -172,7 +172,7 @@
           <div class="grid gap-10 md:grid-cols-2">
             <div>
               <p class="text-xs font-semibold uppercase tracking-[0.2em] text-ink-500">How it works</p>
-              <h2 class="mt-3 text-3xl font-semibold text-ink-900">How planning with Van travels works</h2>
+              <h2 class="mt-3 text-3xl font-semibold text-ink-900">How planning with Hidden Charm Asia works</h2>
               <p class="mt-4 text-sm text-ink-600">
                 From discovery call to departure, we keep the path clear: fast options, real customization,
                 and local support.
@@ -363,8 +363,8 @@
 
         <section id="why" class="py-16 md:py-24">
           <div class="flex flex-col gap-4">
-            <p class="text-xs font-semibold uppercase tracking-[0.2em] text-ink-500">Why Van travels</p>
-            <h2 class="text-3xl font-semibold text-ink-900">Why travelers book with Van travels</h2>
+            <p class="text-xs font-semibold uppercase tracking-[0.2em] text-ink-500">Why Hidden Charm Asia</p>
+            <h2 class="text-3xl font-semibold text-ink-900">Why travelers book with Hidden Charm Asia</h2>
           </div>
           <div class="mt-10 grid gap-6 md:grid-cols-2 lg:grid-cols-3">
             <div class="rounded-2xl border border-slate-100 bg-white p-6 shadow-sm">
@@ -588,7 +588,7 @@
         <div class="mx-auto w-full max-w-6xl px-6">
           <div class="grid gap-8 md:grid-cols-[1.2fr_0.8fr_0.8fr]">
             <div>
-              <p class="text-lg font-semibold text-ink-900">Van travels</p>
+              <p class="text-lg font-semibold text-ink-900">Hidden Charm Asia</p>
               <p class="mt-3 text-sm text-ink-600">Custom Vietnam, Thailand & Cambodia holidays by local experts.</p>
             </div>
             <div class="text-sm text-ink-600">
@@ -623,7 +623,7 @@
       {
         "@context": "https://schema.org",
         "@type": "TravelAgency",
-        "name": "Van travels",
+        "name": "Hidden Charm Asia",
         "address": {
           "@type": "PostalAddress",
           "streetAddress": "75 Nguyen Hue, District 1",
