--- a/index.html
+++ b/index.html
@@ -484,7 +484,165 @@
     </div>
 
     <script id="tripsFallback" type="application/json">
-      []
+[
+  {
+    "id": "trip-vn-essentials",
+    "title": "Vietnam Essentials",
+    "shortDescription": "Classic first-time route with food, culture, and smooth private transfers.",
+    "destinationCountry": "Vietnam",
+    "styles": ["Culture", "Food", "Family"],
+    "durationDays": 11,
+    "priceFrom": 980,
+    "image": "assets/img/tour-vietnam-culture.svg",
+    "highlights": ["Hanoi old quarter walk", "Ha Long overnight cruise", "Hoi An cooking class"],
+    "seasonality": "Best Oct-Apr",
+    "rating": 4.9
+  },
+  {
+    "id": "trip-vn-food-week",
+    "title": "Vietnam Food and Culture Week",
+    "shortDescription": "Street food, local kitchens, and heritage neighborhoods with private pacing.",
+    "destinationCountry": "Vietnam",
+    "styles": ["Food", "Culture", "Budget"],
+    "durationDays": 8,
+    "priceFrom": 720,
+    "image": "assets/img/tour-vietnam-food.svg",
+    "highlights": ["Hanoi food alleys", "Hue royal cuisine", "Saigon market tastings"],
+    "seasonality": "Best Sep-Apr",
+    "rating": 4.8
+  },
+  {
+    "id": "trip-th-beach",
+    "title": "Thailand Beach Escape",
+    "shortDescription": "Bangkok city energy followed by island relaxation and easy logistics.",
+    "destinationCountry": "Thailand",
+    "styles": ["Beach", "Luxury", "Family"],
+    "durationDays": 10,
+    "priceFrom": 1120,
+    "image": "assets/img/tour-thailand-beach.svg",
+    "highlights": ["Bangkok canal tour", "Island hopping day", "Beachfront resort stay"],
+    "seasonality": "Best Nov-Mar",
+    "rating": 4.8
+  },
+  {
+    "id": "trip-th-family",
+    "title": "Thailand Family Comfort Route",
+    "shortDescription": "Kid-friendly pace, easy logistics, and balanced city plus beach days.",
+    "destinationCountry": "Thailand",
+    "styles": ["Family", "Beach", "Culture"],
+    "durationDays": 12,
+    "priceFrom": 1280,
+    "image": "assets/img/tour-thailand-family.svg",
+    "highlights": ["Chiang Mai elephants sanctuary", "Bangkok family activities", "Phuket resort days"],
+    "seasonality": "Best Nov-Mar",
+    "rating": 4.9
+  },
+  {
+    "id": "trip-kh-heritage",
+    "title": "Cambodia Heritage Trail",
+    "shortDescription": "Meaningful history, temple artistry, and relaxed private pacing.",
+    "destinationCountry": "Cambodia",
+    "styles": ["Culture", "Luxury", "Food"],
+    "durationDays": 8,
+    "priceFrom": 760,
+    "image": "assets/img/tour-cambodia-heritage.svg",
+    "highlights": ["Angkor sunrise", "Phnom Penh history day", "Local market tasting"],
+    "seasonality": "Best Nov-Feb",
+    "rating": 4.9
+  },
+  {
+    "id": "trip-cambodia-laos",
+    "title": "Cambodia and Laos Heritage Trail",
+    "shortDescription": "Temple heritage plus Mekong slow travel in one calm, meaningful route.",
+    "destinationCountry": "Cambodia",
+    "styles": ["Culture", "Adventure", "Family"],
+    "durationDays": 11,
+    "priceFrom": 1040,
+    "image": "assets/img/tour-cambodia-laos.svg",
+    "highlights": ["Angkor highlights", "Luang Prabang old town", "Mekong river segment"],
+    "seasonality": "Best Nov-Feb",
+    "rating": 4.8
+  },
+  {
+    "id": "trip-laos-slow",
+    "title": "Laos Nature and Slow Travel",
+    "shortDescription": "River calm, mountain scenery, and authentic local experiences.",
+    "destinationCountry": "Laos",
+    "styles": ["Adventure", "Culture", "Budget"],
+    "durationDays": 9,
+    "priceFrom": 690,
+    "image": "assets/img/tour-laos-nature.svg",
+    "highlights": ["Luang Prabang temples", "Kuang Si waterfall", "Mekong sunset cruise"],
+    "seasonality": "Best Nov-Feb",
+    "rating": 4.7
+  },
+  {
+    "id": "trip-vn-th-combo",
+    "title": "Vietnam and Thailand Highlights",
+    "shortDescription": "Perfect mix of culture, city life, and beach downtime.",
+    "destinationCountry": "Vietnam",
+    "styles": ["Culture", "Beach", "Luxury"],
+    "durationDays": 13,
+    "priceFrom": 1450,
+    "image": "assets/img/tour-vietnam-thailand.svg",
+    "highlights": ["Hanoi and Hoi An", "Bangkok food evening", "Phuket beach days"],
+    "seasonality": "Best Nov-Mar",
+    "rating": 4.9
+  },
+  {
+    "id": "trip-vn-kh-combo",
+    "title": "Vietnam and Cambodia Discovery",
+    "shortDescription": "Balanced route for first-timers who want iconic and local experiences.",
+    "destinationCountry": "Cambodia",
+    "styles": ["Culture", "Family", "Food"],
+    "durationDays": 12,
+    "priceFrom": 1240,
+    "image": "assets/img/tour-vietnam-cambodia.svg",
+    "highlights": ["Mekong delta day", "Siem Reap by tuk tuk", "Street food with guide"],
+    "seasonality": "Best Oct-Mar",
+    "rating": 4.8
+  },
+  {
+    "id": "trip-grand-indochina",
+    "title": "Grand Indochina Explorer",
+    "shortDescription": "Vietnam, Cambodia, and Laos in one seamless private itinerary.",
+    "destinationCountry": "Vietnam",
+    "styles": ["Adventure", "Culture", "Luxury"],
+    "durationDays": 16,
+    "priceFrom": 1890,
+    "image": "assets/img/tour-grand-indochina.svg",
+    "highlights": ["Ha Long bay cruise", "Angkor heritage days", "Laos river slow travel"],
+    "seasonality": "Best Nov-Feb",
+    "rating": 5.0
+  },
+  {
+    "id": "trip-th-la-combo",
+    "title": "Thailand and Laos Slow Journey",
+    "shortDescription": "A softer pace with cultural depth and nature-led moments.",
+    "destinationCountry": "Thailand",
+    "styles": ["Adventure", "Beach", "Budget"],
+    "durationDays": 11,
+    "priceFrom": 970,
+    "image": "assets/img/tour-thailand-laos.svg",
+    "highlights": ["Chiang Mai temples", "Luang Prabang old town", "Scenic boat segment"],
+    "seasonality": "Best Nov-Feb",
+    "rating": 4.7
+  },
+  {
+    "id": "trip-honeymoon-luxury",
+    "title": "Southeast Asia Honeymoon Luxury",
+    "shortDescription": "Romantic private route with premium stays and curated signature moments.",
+    "destinationCountry": "Vietnam",
+    "styles": ["Luxury", "Beach", "Food"],
+    "durationDays": 14,
+    "priceFrom": 2450,
+    "image": "assets/img/tour-honeymoon-luxury.svg",
+    "highlights": ["Lan Ha bay private cruise", "Beach villa nights", "Fine dining and spa days"],
+    "seasonality": "Best Nov-Apr",
+    "rating": 5.0
+  }
+]
+
     </script>
     <script src="assets/js/main.js" defer></script>
 
