--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <main id="main-content">
       <section class="hero" id="hero">
         <div class="container hero-grid">
-          <div>
+          <div class="hero-copy">
             <span class="hero-eyebrow">chapter2.live • Local experts in Southeast Asia</span>
             <h1>Private holidays in Vietnam, Thailand, Cambodia and Laos</h1>
             <p>
@@ -102,12 +102,42 @@
               <li>Transparent inclusions and exclusions before booking.</li>
             </ul>
           </div>
-          <figure class="hero-image-card">
-            <img src="assets/img/hero-vietnam.svg" alt="Lantern-lit river scene in Vietnam at sunset" width="2000" height="1125" />
+          <figure class="hero-image-card hero-media">
+            <img
+              src="assets/img/flickr/hero-flickr.jpg"
+              alt="Scenic Southeast Asia landscape"
+              width="2000"
+              height="1125"
+            />
             <figcaption class="microcopy">
               Friendly planning call, clear quote ladder, and practical support during your trip.
             </figcaption>
           </figure>
+        </div>
+      </section>
+
+      <section class="container section media-highlight" aria-label="Travel media highlight">
+        <div class="split">
+          <article class="panel">
+            <h2 class="section-title">See the experience style we design</h2>
+            <p class="section-lead">
+              Cinematic routes, local immersion, and private comfort. This prototype uses Flickr-sourced
+              travel imagery for visual direction.
+            </p>
+            <div class="contact-row">
+              <a class="btn btn-primary" href="#tours">Browse sample journeys</a>
+              <button class="btn btn-secondary" type="button" data-open-modal>Plan my route</button>
+            </div>
+          </article>
+          <article class="panel video-panel">
+            <video controls playsinline preload="metadata" poster="assets/img/flickr/hero-flickr.jpg">
+              <source src="assets/video/ha long bay.mp4" type="video/mp4" />
+              Your browser does not support HTML5 video.
+            </video>
+            <p class="micro">
+              Playing local video file: <code>assets/video/ha long bay.mp4</code>.
+            </p>
+          </article>
         </div>
       </section>
 
@@ -493,7 +523,8 @@
     "styles": ["Culture", "Food", "Family"],
     "durationDays": 11,
     "priceFrom": 980,
-    "image": "assets/img/tour-vietnam-culture.svg",
+    "image": "assets/img/flickr/vietnam-1.jpg",
+    "fallbackImage": "assets/img/tour-vietnam-culture.svg",
     "highlights": ["Hanoi old quarter walk", "Ha Long overnight cruise", "Hoi An cooking class"],
     "seasonality": "Best Oct-Apr",
     "rating": 4.9
@@ -506,7 +537,8 @@
     "styles": ["Food", "Culture", "Budget"],
     "durationDays": 8,
     "priceFrom": 720,
-    "image": "assets/img/tour-vietnam-food.svg",
+    "image": "assets/img/flickr/vietnam-2.jpg",
+    "fallbackImage": "assets/img/tour-vietnam-food.svg",
     "highlights": ["Hanoi food alleys", "Hue royal cuisine", "Saigon market tastings"],
     "seasonality": "Best Sep-Apr",
     "rating": 4.8
@@ -519,7 +551,8 @@
     "styles": ["Beach", "Luxury", "Family"],
     "durationDays": 10,
     "priceFrom": 1120,
-    "image": "assets/img/tour-thailand-beach.svg",
+    "image": "assets/img/flickr/thailand-1.jpg",
+    "fallbackImage": "assets/img/tour-thailand-beach.svg",
     "highlights": ["Bangkok canal tour", "Island hopping day", "Beachfront resort stay"],
     "seasonality": "Best Nov-Mar",
     "rating": 4.8
@@ -532,7 +565,8 @@
     "styles": ["Family", "Beach", "Culture"],
     "durationDays": 12,
     "priceFrom": 1280,
-    "image": "assets/img/tour-thailand-family.svg",
+    "image": "assets/img/flickr/thailand-2.jpg",
+    "fallbackImage": "assets/img/tour-thailand-family.svg",
     "highlights": ["Chiang Mai elephants sanctuary", "Bangkok family activities", "Phuket resort days"],
     "seasonality": "Best Nov-Mar",
     "rating": 4.9
@@ -545,7 +579,8 @@
     "styles": ["Culture", "Luxury", "Food"],
     "durationDays": 8,
     "priceFrom": 760,
-    "image": "assets/img/tour-cambodia-heritage.svg",
+    "image": "assets/img/flickr/cambodia-1.jpg",
+    "fallbackImage": "assets/img/tour-cambodia-heritage.svg",
     "highlights": ["Angkor sunrise", "Phnom Penh history day", "Local market tasting"],
     "seasonality": "Best Nov-Feb",
     "rating": 4.9
@@ -558,7 +593,8 @@
     "styles": ["Culture", "Adventure", "Family"],
     "durationDays": 11,
     "priceFrom": 1040,
-    "image": "assets/img/tour-cambodia-laos.svg",
+    "image": "assets/img/flickr/cambodia-2.jpg",
+    "fallbackImage": "assets/img/tour-cambodia-laos.svg",
     "highlights": ["Angkor highlights", "Luang Prabang old town", "Mekong river segment"],
     "seasonality": "Best Nov-Feb",
     "rating": 4.8
@@ -571,7 +607,8 @@
     "styles": ["Adventure", "Culture", "Budget"],
     "durationDays": 9,
     "priceFrom": 690,
-    "image": "assets/img/tour-laos-nature.svg",
+    "image": "assets/img/flickr/laos-1.jpg",
+    "fallbackImage": "assets/img/tour-laos-nature.svg",
     "highlights": ["Luang Prabang temples", "Kuang Si waterfall", "Mekong sunset cruise"],
     "seasonality": "Best Nov-Feb",
     "rating": 4.7
@@ -584,7 +621,8 @@
     "styles": ["Culture", "Beach", "Luxury"],
     "durationDays": 13,
     "priceFrom": 1450,
-    "image": "assets/img/tour-vietnam-thailand.svg",
+    "image": "assets/img/flickr/vietnam-1.jpg",
+    "fallbackImage": "assets/img/tour-vietnam-thailand.svg",
     "highlights": ["Hanoi and Hoi An", "Bangkok food evening", "Phuket beach days"],
     "seasonality": "Best Nov-Mar",
     "rating": 4.9
@@ -597,7 +635,8 @@
     "styles": ["Culture", "Family", "Food"],
     "durationDays": 12,
     "priceFrom": 1240,
-    "image": "assets/img/tour-vietnam-cambodia.svg",
+    "image": "assets/img/flickr/cambodia-1.jpg",
+    "fallbackImage": "assets/img/tour-vietnam-cambodia.svg",
     "highlights": ["Mekong delta day", "Siem Reap by tuk tuk", "Street food with guide"],
     "seasonality": "Best Oct-Mar",
     "rating": 4.8
@@ -610,7 +649,8 @@
     "styles": ["Adventure", "Culture", "Luxury"],
     "durationDays": 16,
     "priceFrom": 1890,
-    "image": "assets/img/tour-grand-indochina.svg",
+    "image": "assets/img/flickr/laos-2.jpg",
+    "fallbackImage": "assets/img/tour-grand-indochina.svg",
     "highlights": ["Ha Long bay cruise", "Angkor heritage days", "Laos river slow travel"],
     "seasonality": "Best Nov-Feb",
     "rating": 5.0
@@ -623,7 +663,8 @@
     "styles": ["Adventure", "Beach", "Budget"],
     "durationDays": 11,
     "priceFrom": 970,
-    "image": "assets/img/tour-thailand-laos.svg",
+    "image": "assets/img/flickr/thailand-2.jpg",
+    "fallbackImage": "assets/img/tour-thailand-laos.svg",
     "highlights": ["Chiang Mai temples", "Luang Prabang old town", "Scenic boat segment"],
     "seasonality": "Best Nov-Feb",
     "rating": 4.7
@@ -636,7 +677,8 @@
     "styles": ["Luxury", "Beach", "Food"],
     "durationDays": 14,
     "priceFrom": 2450,
-    "image": "assets/img/tour-honeymoon-luxury.svg",
+    "image": "assets/img/flickr/hero-flickr.jpg",
+    "fallbackImage": "assets/img/tour-honeymoon-luxury.svg",
     "highlights": ["Lan Ha bay private cruise", "Beach villa nights", "Fine dining and spa days"],
     "seasonality": "Best Nov-Apr",
     "rating": 5.0
