logo, new rice field video

--- a/index.html
+++ b/index.html
@@ -38,8 +38,13 @@
     <header class="header" id="top">
       <div class="container header-wrap">
         <a class="brand" href="#top" aria-label="Chapter 2 home">
-          <span class="brand-mark" aria-hidden="true"></span>
-          <span class="brand-name">Chapter 2</span>
+          <img
+            class="brand-logo"
+            src="assets/img/logo-chapter2.svg"
+            alt="Chapter 2"
+            width="320"
+            height="76"
+          />
         </a>
 
         <button
@@ -645,7 +650,7 @@
         "@type": "TravelAgency",
         "name": "Chapter 2",
         "url": "https://chapter2.live/",
-        "logo": "https://chapter2.live/assets/img/favicon.svg",
+        "logo": "https://chapter2.live/assets/img/logo-chapter2.svg",
         "image": "https://chapter2.live/assets/img/hero-vietnam.svg",
         "description": "Private travel agency in Vietnam creating custom holidays across Vietnam, Thailand, Cambodia and Laos.",
         "address": {
