--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://chapter2.live/" />
-    <meta property="og:image" content="https://chapter2.live/assets/img/hero-vietnam.svg" />
+    <meta property="og:image" content="https://chapter2.live/assets/img/flickr/hero-flickr.webp" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Chapter 2 | Custom Southeast Asia Holidays" />
@@ -25,7 +25,7 @@
       name="twitter:description"
       content="Private Vietnam, Thailand, Cambodia and Laos holidays with clear pricing and local support."
     />
-    <meta name="twitter:image" content="https://chapter2.live/assets/img/hero-vietnam.svg" />
+    <meta name="twitter:image" content="https://chapter2.live/assets/img/flickr/hero-flickr.webp" />
 
     <link rel="icon" href="assets/img/favicon.svg" type="image/svg+xml" />
     <link rel="manifest" href="site.webmanifest" />
@@ -87,7 +87,7 @@
 
     <main id="main-content">
       <section class="hero hero-video" id="hero">
-        <video class="hero-bg-video" autoplay muted loop playsinline preload="metadata" poster="assets/img/flickr/hero-flickr.jpg">
+        <video class="hero-bg-video" autoplay muted loop playsinline preload="metadata" poster="assets/img/flickr/hero-flickr.webp">
           <source src="assets/video/rice field.mp4" type="video/mp4" />
           Your browser does not support HTML5 video.
         </video>
@@ -481,8 +481,8 @@
     ],
     "durationDays": 10,
     "priceFrom": 980,
-    "image": "assets/tours/vietnam/adventure/vietnam-adventure.jpg",
-    "fallbackImage": "assets/tours/vietnam/adventure/vietnam-adventure.jpg",
+    "image": "assets/tours/vietnam/adventure/vietnam-adventure.webp",
+    "fallbackImage": "assets/tours/vietnam/adventure/vietnam-adventure.webp",
     "highlights": [
       "Guided nature trail near Hoi An",
       "Scenic boat segment around Ha Long Bay",
@@ -501,8 +501,8 @@
     ],
     "durationDays": 9,
     "priceFrom": 1040,
-    "image": "assets/tours/vietnam/beach/vietnam-beach.jpg",
-    "fallbackImage": "assets/tours/vietnam/beach/vietnam-beach.jpg",
+    "image": "assets/tours/vietnam/beach/vietnam-beach.webp",
+    "fallbackImage": "assets/tours/vietnam/beach/vietnam-beach.webp",
     "highlights": [
       "Sunset beach session near Ha Long Bay",
       "Easy private transfer from Hanoi",
@@ -521,8 +521,8 @@
     ],
     "durationDays": 8,
     "priceFrom": 690,
-    "image": "assets/tours/vietnam/budget/vietnam-budget.jpg",
-    "fallbackImage": "assets/tours/vietnam/budget/vietnam-budget.jpg",
+    "image": "assets/tours/vietnam/budget/vietnam-budget.webp",
+    "fallbackImage": "assets/tours/vietnam/budget/vietnam-budget.webp",
     "highlights": [
       "Best-value stays around Hanoi",
       "Street-level local experiences in Hoi An",
@@ -541,8 +541,8 @@
     ],
     "durationDays": 9,
     "priceFrom": 860,
-    "image": "assets/tours/vietnam/culture/vietnam-culture.jpg",
-    "fallbackImage": "assets/tours/vietnam/culture/vietnam-culture.jpg",
+    "image": "assets/tours/vietnam/culture/vietnam-culture.webp",
+    "fallbackImage": "assets/tours/vietnam/culture/vietnam-culture.webp",
     "highlights": [
       "Heritage landmarks in Hanoi",
       "Guided old-quarter walk in Hoi An",
@@ -561,8 +561,8 @@
     ],
     "durationDays": 11,
     "priceFrom": 1180,
-    "image": "assets/tours/vietnam/family/vietnam-family.jpg",
-    "fallbackImage": "assets/tours/vietnam/family/vietnam-family.jpg",
+    "image": "assets/tours/vietnam/family/vietnam-family.webp",
+    "fallbackImage": "assets/tours/vietnam/family/vietnam-family.webp",
     "highlights": [
       "Kid-friendly day in Hanoi",
       "Balanced travel time between Hanoi and Hoi An",
@@ -581,8 +581,8 @@
     ],
     "durationDays": 8,
     "priceFrom": 790,
-    "image": "assets/tours/vietnam/food/vietnam-food.jpg",
-    "fallbackImage": "assets/tours/vietnam/food/vietnam-food.jpg",
+    "image": "assets/tours/vietnam/food/vietnam-food.webp",
+    "fallbackImage": "assets/tours/vietnam/food/vietnam-food.webp",
     "highlights": [
       "Street food tasting in Hanoi",
       "Market-to-table experience in Hoi An",
@@ -601,8 +601,8 @@
     ],
     "durationDays": 12,
     "priceFrom": 1980,
-    "image": "assets/tours/vietnam/luxury/vietnam-luxury.jpg",
-    "fallbackImage": "assets/tours/vietnam/luxury/vietnam-luxury.jpg",
+    "image": "assets/tours/vietnam/luxury/vietnam-luxury.webp",
+    "fallbackImage": "assets/tours/vietnam/luxury/vietnam-luxury.webp",
     "highlights": [
       "Boutique premium stay in Hanoi",
       "Private guided experience in Hoi An",
@@ -621,8 +621,8 @@
     ],
     "durationDays": 11,
     "priceFrom": 1100,
-    "image": "assets/tours/thailand/adventure/thailand-adventure.jpg",
-    "fallbackImage": "assets/tours/thailand/adventure/thailand-adventure.jpg",
+    "image": "assets/tours/thailand/adventure/thailand-adventure.webp",
+    "fallbackImage": "assets/tours/thailand/adventure/thailand-adventure.webp",
     "highlights": [
       "Guided nature trail near Chiang Mai",
       "Scenic boat segment around Phuket",
@@ -641,8 +641,8 @@
     ],
     "durationDays": 10,
     "priceFrom": 1160,
-    "image": "assets/tours/thailand/beach/thailand-beach.jpg",
-    "fallbackImage": "assets/tours/thailand/beach/thailand-beach.jpg",
+    "image": "assets/tours/thailand/beach/thailand-beach.webp",
+    "fallbackImage": "assets/tours/thailand/beach/thailand-beach.webp",
     "highlights": [
       "Sunset beach session near Phuket",
       "Easy private transfer from Bangkok",
@@ -661,8 +661,8 @@
     ],
     "durationDays": 9,
     "priceFrom": 810,
-    "image": "assets/tours/thailand/budget/thailand-budget.jpg",
-    "fallbackImage": "assets/tours/thailand/budget/thailand-budget.jpg",
+    "image": "assets/tours/thailand/budget/thailand-budget.webp",
+    "fallbackImage": "assets/tours/thailand/budget/thailand-budget.webp",
     "highlights": [
       "Best-value stays around Bangkok",
       "Street-level local experiences in Chiang Mai",
@@ -681,8 +681,8 @@
     ],
     "durationDays": 10,
     "priceFrom": 980,
-    "image": "assets/tours/thailand/culture/thailand-culture.jpg",
-    "fallbackImage": "assets/tours/thailand/culture/thailand-culture.jpg",
+    "image": "assets/tours/thailand/culture/thailand-culture.webp",
+    "fallbackImage": "assets/tours/thailand/culture/thailand-culture.webp",
     "highlights": [
       "Heritage landmarks in Bangkok",
       "Guided old-quarter walk in Chiang Mai",
@@ -701,8 +701,8 @@
     ],
     "durationDays": 12,
     "priceFrom": 1300,
-    "image": "assets/tours/thailand/family/thailand-family.jpg",
-    "fallbackImage": "assets/tours/thailand/family/thailand-family.jpg",
+    "image": "assets/tours/thailand/family/thailand-family.webp",
+    "fallbackImage": "assets/tours/thailand/family/thailand-family.webp",
     "highlights": [
       "Kid-friendly day in Bangkok",
       "Balanced travel time between Bangkok and Chiang Mai",
@@ -721,8 +721,8 @@
     ],
     "durationDays": 9,
     "priceFrom": 910,
-    "image": "assets/tours/thailand/food/thailand-food.jpg",
-    "fallbackImage": "assets/tours/thailand/food/thailand-food.jpg",
+    "image": "assets/tours/thailand/food/thailand-food.webp",
+    "fallbackImage": "assets/tours/thailand/food/thailand-food.webp",
     "highlights": [
       "Street food tasting in Bangkok",
       "Market-to-table experience in Chiang Mai",
@@ -741,8 +741,8 @@
     ],
     "durationDays": 13,
     "priceFrom": 2100,
-    "image": "assets/tours/thailand/luxury/thailand-luxury.jpg",
-    "fallbackImage": "assets/tours/thailand/luxury/thailand-luxury.jpg",
+    "image": "assets/tours/thailand/luxury/thailand-luxury.webp",
+    "fallbackImage": "assets/tours/thailand/luxury/thailand-luxury.webp",
     "highlights": [
       "Boutique premium stay in Bangkok",
       "Private guided experience in Chiang Mai",
@@ -761,8 +761,8 @@
     ],
     "durationDays": 10,
     "priceFrom": 900,
-    "image": "assets/tours/cambodia/adventure/cambodia-adventure.jpg",
-    "fallbackImage": "assets/tours/cambodia/adventure/cambodia-adventure.jpg",
+    "image": "assets/tours/cambodia/adventure/cambodia-adventure.webp",
+    "fallbackImage": "assets/tours/cambodia/adventure/cambodia-adventure.webp",
     "highlights": [
       "Guided nature trail near Phnom Penh",
       "Scenic boat segment around Tonle Sap",
@@ -781,8 +781,8 @@
     ],
     "durationDays": 9,
     "priceFrom": 960,
-    "image": "assets/tours/cambodia/beach/cambodia-beach.jpg",
-    "fallbackImage": "assets/tours/cambodia/beach/cambodia-beach.jpg",
+    "image": "assets/tours/cambodia/beach/cambodia-beach.webp",
+    "fallbackImage": "assets/tours/cambodia/beach/cambodia-beach.webp",
     "highlights": [
       "Sunset beach session near Tonle Sap",
       "Easy private transfer from Siem Reap",
@@ -801,8 +801,8 @@
     ],
     "durationDays": 8,
     "priceFrom": 610,
-    "image": "assets/tours/cambodia/budget/cambodia-budget.jpg",
-    "fallbackImage": "assets/tours/cambodia/budget/cambodia-budget.jpg",
+    "image": "assets/tours/cambodia/budget/cambodia-budget.webp",
+    "fallbackImage": "assets/tours/cambodia/budget/cambodia-budget.webp",
     "highlights": [
       "Best-value stays around Siem Reap",
       "Street-level local experiences in Phnom Penh",
@@ -821,8 +821,8 @@
     ],
     "durationDays": 9,
     "priceFrom": 780,
-    "image": "assets/tours/cambodia/culture/cambodia-culture.jpg",
-    "fallbackImage": "assets/tours/cambodia/culture/cambodia-culture.jpg",
+    "image": "assets/tours/cambodia/culture/cambodia-culture.webp",
+    "fallbackImage": "assets/tours/cambodia/culture/cambodia-culture.webp",
     "highlights": [
       "Heritage landmarks in Siem Reap",
       "Guided old-quarter walk in Phnom Penh",
@@ -841,8 +841,8 @@
     ],
     "durationDays": 11,
     "priceFrom": 1100,
-    "image": "assets/tours/cambodia/family/cambodia-family.jpg",
-    "fallbackImage": "assets/tours/cambodia/family/cambodia-family.jpg",
+    "image": "assets/tours/cambodia/family/cambodia-family.webp",
+    "fallbackImage": "assets/tours/cambodia/family/cambodia-family.webp",
     "highlights": [
       "Kid-friendly day in Siem Reap",
       "Balanced travel time between Siem Reap and Phnom Penh",
@@ -861,8 +861,8 @@
     ],
     "durationDays": 8,
     "priceFrom": 710,
-    "image": "assets/tours/cambodia/food/cambodia-food.jpg",
-    "fallbackImage": "assets/tours/cambodia/food/cambodia-food.jpg",
+    "image": "assets/tours/cambodia/food/cambodia-food.webp",
+    "fallbackImage": "assets/tours/cambodia/food/cambodia-food.webp",
     "highlights": [
       "Street food tasting in Siem Reap",
       "Market-to-table experience in Phnom Penh",
@@ -881,8 +881,8 @@
     ],
     "durationDays": 12,
     "priceFrom": 1900,
-    "image": "assets/tours/cambodia/luxury/cambodia-luxury.jpg",
-    "fallbackImage": "assets/tours/cambodia/luxury/cambodia-luxury.jpg",
+    "image": "assets/tours/cambodia/luxury/cambodia-luxury.webp",
+    "fallbackImage": "assets/tours/cambodia/luxury/cambodia-luxury.webp",
     "highlights": [
       "Boutique premium stay in Siem Reap",
       "Private guided experience in Phnom Penh",
@@ -901,8 +901,8 @@
     ],
     "durationDays": 10,
     "priceFrom": 840,
-    "image": "assets/tours/laos/adventure/laos-adventure.jpg",
-    "fallbackImage": "assets/tours/laos/adventure/laos-adventure.jpg",
+    "image": "assets/tours/laos/adventure/laos-adventure.webp",
+    "fallbackImage": "assets/tours/laos/adventure/laos-adventure.webp",
     "highlights": [
       "Guided nature trail near Vang Vieng",
       "Scenic boat segment around Mekong River",
@@ -921,8 +921,8 @@
     ],
     "durationDays": 9,
     "priceFrom": 900,
-    "image": "assets/tours/laos/beach/laos-beach.jpg",
-    "fallbackImage": "assets/tours/laos/beach/laos-beach.jpg",
+    "image": "assets/tours/laos/beach/laos-beach.webp",
+    "fallbackImage": "assets/tours/laos/beach/laos-beach.webp",
     "highlights": [
       "Sunset beach session near Mekong River",
       "Easy private transfer from Luang Prabang",
@@ -941,8 +941,8 @@
     ],
     "durationDays": 8,
     "priceFrom": 550,
-    "image": "assets/tours/laos/budget/laos-budget.jpg",
-    "fallbackImage": "assets/tours/laos/budget/laos-budget.jpg",
+    "image": "assets/tours/laos/budget/laos-budget.webp",
+    "fallbackImage": "assets/tours/laos/budget/laos-budget.webp",
     "highlights": [
       "Best-value stays around Luang Prabang",
       "Street-level local experiences in Vang Vieng",
@@ -961,8 +961,8 @@
     ],
     "durationDays": 9,
     "priceFrom": 720,
-    "image": "assets/tours/laos/culture/laos-culture.jpg",
-    "fallbackImage": "assets/tours/laos/culture/laos-culture.jpg",
+    "image": "assets/tours/laos/culture/laos-culture.webp",
+    "fallbackImage": "assets/tours/laos/culture/laos-culture.webp",
     "highlights": [
       "Heritage landmarks in Luang Prabang",
       "Guided old-quarter walk in Vang Vieng",
@@ -981,8 +981,8 @@
     ],
     "durationDays": 11,
     "priceFrom": 1040,
-    "image": "assets/tours/laos/family/laos-family.jpg",
-    "fallbackImage": "assets/tours/laos/family/laos-family.jpg",
+    "image": "assets/tours/laos/family/laos-family.webp",
+    "fallbackImage": "assets/tours/laos/family/laos-family.webp",
     "highlights": [
       "Kid-friendly day in Luang Prabang",
       "Balanced travel time between Luang Prabang and Vang Vieng",
@@ -1001,8 +1001,8 @@
     ],
     "durationDays": 8,
     "priceFrom": 650,
-    "image": "assets/tours/laos/food/laos-food.jpg",
-    "fallbackImage": "assets/tours/laos/food/laos-food.jpg",
+    "image": "assets/tours/laos/food/laos-food.webp",
+    "fallbackImage": "assets/tours/laos/food/laos-food.webp",
     "highlights": [
       "Street food tasting in Luang Prabang",
       "Market-to-table experience in Vang Vieng",
@@ -1021,8 +1021,8 @@
     ],
     "durationDays": 12,
     "priceFrom": 1840,
-    "image": "assets/tours/laos/luxury/laos-luxury.jpg",
-    "fallbackImage": "assets/tours/laos/luxury/laos-luxury.jpg",
+    "image": "assets/tours/laos/luxury/laos-luxury.webp",
+    "fallbackImage": "assets/tours/laos/luxury/laos-luxury.webp",
     "highlights": [
       "Boutique premium stay in Luang Prabang",
       "Private guided experience in Vang Vieng",
