--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
     <main id="main-content">
       <section class="hero hero-video" id="hero">
         <video class="hero-bg-video" autoplay muted loop playsinline preload="metadata" poster="assets/video/rice field.webp?v=2">
+          <source src="assets/video/rice field.webm" type="video/webm" />
           <source src="assets/video/rice field.mp4" type="video/mp4" />
           Your browser does not support HTML5 video.
         </video>
