faster web page loading

--- a/index.html
+++ b/index.html
@@ -29,8 +29,23 @@
 
     <link rel="icon" href="assets/img/favicon.svg" type="image/svg+xml" />
     <link rel="manifest" href="site.webmanifest" />
+    <link rel="preload" as="image" href="assets/video/rice%20field.webp?v=2" fetchpriority="high" />
+    <link rel="preload" as="video" href="assets/video/rice%20field.webm" type="video/webm" />
+    <link rel="preload" as="style" href="assets/css/styles.css?v=3" />
 
-    <link rel="stylesheet" href="assets/css/styles.css" />
+    <style>
+      html, body { margin: 0; padding: 0; background: #fdfdfd; color: #1c2b35; font-family: "Segoe UI", "Avenir Next", "Helvetica Neue", Arial, sans-serif; }
+      .header { position: sticky; top: 0; z-index: 50; background: rgba(253, 253, 253, 0.92); border-bottom: 1px solid #deeaef; }
+      .container { width: min(1120px, 92vw); margin: 0 auto; }
+      .header-wrap { min-height: 74px; display: flex; align-items: center; justify-content: space-between; gap: 1rem; }
+      .hero-video { position: relative; min-height: min(88vh, 860px); overflow: hidden; }
+      .hero-bg-video { position: absolute; inset: 0; width: 100%; height: 100%; object-fit: cover; }
+      .hero-scrim { position: absolute; inset: 0; background: linear-gradient(180deg, rgba(6, 18, 24, 0.3) 0%, rgba(6, 18, 24, 0.58) 58%, rgba(6, 18, 24, 0.82) 100%); }
+      .hero-content { position: relative; z-index: 2; min-height: min(88vh, 860px); display: flex; align-items: center; justify-content: center; text-align: center; padding: 5rem 1rem 2.5rem; }
+      .hero-title-only { margin: 0; color: #fff; font-size: clamp(1.9rem, 4vw, 3.4rem); line-height: 1.15; max-width: 24ch; text-shadow: 0 6px 22px rgba(0,0,0,0.45); }
+    </style>
+    <link rel="stylesheet" href="assets/css/styles.css?v=3" media="print" onload="this.media='all'" />
+    <noscript><link rel="stylesheet" href="assets/css/styles.css?v=3" /></noscript>
   </head>
   <body>
     <a class="skip-link" href="#main-content">Skip to content</a>
