show more tours

--- a/index.html
+++ b/index.html
@@ -123,6 +123,10 @@
           <div class="filters-toolbar" id="activeFilters" aria-live="polite"></div>
 
           <div class="tour-grid" id="tourGrid" aria-live="polite"></div>
+          <div class="tour-actions" id="tourActions" hidden>
+            <button class="btn btn-secondary" id="showMoreTours" type="button">Show more</button>
+            <button class="btn btn-secondary" id="showAllTours" type="button">Show all</button>
+          </div>
           <p id="noResultsMessage" class="section-lead" hidden>
             No tours match these filters yet. Try "All destinations" or "All styles".
           </p>
